--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,25 +1,27 @@
-# MARIADB connection
 
-spring.datasource.url=jdbc:mariadb://localhost:3306/fournisseurs
-spring.datasource.username=root
-spring.datasource.password=
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-
-# H2 connection
-
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2
-# Datasource
-#spring.datasource.url=jdbc:h2:file:~/test
-#spring.datasource.username=sa
-#spring.datasource.password=
-#spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.application.name=fournisseur-service
-server.port = 8090
 spring.config.import=optional:configserver:
 
-#Service Name
-eureka.client.server-url.default-zone=http://localhost:8081/eureka-server
-eureka.client.register-with-eureka=true
+server.port=8081
+
+#Eureka
+
+
+### DATABASE ###
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/offre?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
+
+### JPA / HIBERNATE ###
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+
+#Web configuration
+spring.mvc.view.prefix=/views/
+spring.mvc.view.suffix=.jsp
+spring.application.name=offre-service
+#loggingconfiguration
+logging.level.tn.esprit.service=debug
+logging.level.tn.esprit.repository=warn
+logging.file.name=C:/logs/springboot.log
